loopfor.LoopFor.scala.error
Erreur de compilation :
LoopFor:8: error: not found: value nbPAs
for (i <- 0 to nbPAs) {
               ^